height on mobile devices fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html {
 
 body {
   height: 100vh;
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   justify-content: center;
